--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "devDependencies": {
     "grunt": "latest",
     "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-sass": "~0.7.1"
+    "grunt-contrib-sass": "~0.7.1",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-copy": "~0.5.0",
+    "bespoke": "~0.4.0",
+    "bespoke-keys": "~0.1.0",
+    "bespoke-touch": "~0.1.0",
+    "bespoke-bullets": "~0.2.1",
+    "grunt-contrib-uglify": "~0.3.2"
   }
 }
