--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "grunt-contrib-sass": "~0.7.1",
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-uglify": "~0.3.2",
     "bespoke": "~0.4.0",
     "bespoke-keys": "~0.1.0",
     "bespoke-touch": "~0.1.0",
-    "bespoke-bullets": "~0.2.1",
-    "grunt-contrib-uglify": "~0.3.2"
+    "bespoke-bullets": "~0.2.1"
   }
 }
