--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "grunt-contrib-htmlmin": "~0.1.3",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-connect": "~0.6.0",
     "bespoke": "~0.4.0",
     "bespoke-keys": "~0.1.0",
     "bespoke-touch": "~0.1.0",
-    "bespoke-bullets": "~0.2.1"
+    "bespoke-bullets": "~0.2.1",
+    "bespoke-scale": "~0.2.0"
   }
 }
