--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # .gitignore
 
 .sass-cache/*
-src/css/bourbon/**/*
-src/css/neat/**/*
+src/css/bourbon/*
+src/css/neat/*
 dist/*
 node_modules/*
 ~*
