--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "bespoke": "~0.4.0",
     "bespoke-keys": "~0.1.0",
     "bespoke-touch": "~0.1.0",
-    "bespoke-bullets": "~0.2.1",
+    "bespoke-bullets": "~0.2.1"
   }
 }
